# c-integration-modern-cpp

./: CMakeLists.txt  LICENSE  README.md
inc/: integrations.h  smart_pointers_integrations.h  wrapped_integrations.h
old_func/inc/: old_func.h
old_func/src/: old_func.c
old_pimpl/inc/: old_pimpl.h
old_pimpl/src/: old_pimpl.c
old_struct/inc/: old_struct.h
old_struct/src/: old_struct.c
tests/: integrations_tests.cpp  smart_pointers_integrations_tests.cpp  wrapped_integrations_tests.cpp
